<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">擴增實境RPG</string>
	<string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="register">註冊</string>
    <string name="login">登入</string>
    <string name="status">玩家狀態</string>
    <string name="bag">背包</string>
    <string name="skill">法術</string>
    <string name="mission">任務</string>
    <string name="enter">進入</string>
    <string name="hp">HP</string>
    <string name="mp">MP</string>
    <string name="buy">買</string>
    <string name="sell">賣</string>
    <string name="buyorsell">購買</string>
    <string name="shopname">商店名稱</string>
    <string name="sellmoney">價格</string>
    <string name="name">名稱</string>
    <string name="effect">效果/能力</string>
    <string name="blood">血量</string>
    <string name="mana">魔力</string>
    <string name="expname">經驗值</string>
    <string name="campname">所屬陣營</string>
    <string name="lvname">等級</string>
    <string name="moneyname">金錢</string>
    <string name="resourcename">物資</string>
    <string name="nowuse">現在使用</string>
    <string name="weapon">武器</string>
    <string name="item">道具</string>
    <string name="allskill">所有法術</string>
    <string name="skillname">法術名稱:</string>
    <string name="skilldmg">法術傷害:</string>
    <string name="cd">冷卻時間:</string>
    <string name="cdb">冷卻時間</string>
    <string name="cost">消耗魔力:</string>
    <string name="canmission">可接受任務</string>
    <string name="finishmission">已完成任務</string>
    <string name="accpmission">已接受任務</string>
    <string name="missioncontent">任務內容</string>
    <string name="missionstatus">任務狀態</string>  
    <string name="missionreward">任務獎勵</string>
    <string name="equip">裝備/卸下</string>
    <string name="bagitemname">道具名稱</string>
    <string name="itemeffect">道具效果/說明</string>
    <string name="load">loading.....</string>
    <string name="camp1">紅軍</string>
    <string name="camp2">藍軍</string>
    <string name="entername">輸入暱稱</string>
    <string name="enterpwd">輸入密碼</string>
    <string name="enterid">輸入帳號</string>
    <string name="enterworld">確認</string>
    <string name="choose">選擇陣營</string>
    <string name="shop">商店</string>
    <string name="yes">確定</string>
    <string name="no">返回</string>
    <string name="aceq">確認裝備</string>
    <string name="attack">攻打據點</string>
    <string name="num">數量</string>
	<string name="select">請選擇要攻擊的守衛</string>
	<string name="def">防守</string>
	<string name="nowfreenum">閒置</string>
	<string name="nowbatnum">戰鬥中</string>
	<string name="needresource">需求資源</string>
	<string name="nowresource">現在資源:</string>
	<string name="donate">投資</string>
	
</resources>