<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="100" >

    <Button
        android:id="@+id/canmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:text="@string/canmission" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/missioncontent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/canmission" >
    </ListView>

    <TextView
        android:id="@+id/missioncontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/missioncontent" />

    <Button
        android:id="@+id/accpmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView1"
        android:layout_toEndOf="@+id/canmission"
        android:layout_toRightOf="@+id/canmission"
        android:text="@string/accpmission" />

    <Button
        android:id="@+id/finishmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView1"
        android:layout_toEndOf="@+id/accpmission"
        android:layout_toRightOf="@+id/accpmission"
        android:text="@string/finishmission" />

    <TextView
        android:id="@+id/missionreward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/content"
        android:layout_alignEnd="@+id/accpmission"
        android:layout_alignRight="@+id/accpmission"
        android:text="@string/missionreward" />

    <TextView
        android:id="@+id/reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/acbutton"
        android:layout_alignLeft="@+id/missionreward"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/missionreward"
        android:layout_alignTop="@+id/content"
        android:text="" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/missioncontent"
        android:layout_toLeftOf="@+id/reward"
        android:layout_toStartOf="@+id/missionreward" />

    <TextView
        android:id="@+id/missiontarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reward"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="36dp"
        android:text="@string/missionstatus" />

    <TextView
        android:id="@+id/targetstring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/acbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/content"
        android:layout_alignTop="@+id/missiontarget"
        android:layout_marginTop="14dp"
        android:text="" />

    <Button
        android:id="@+id/acbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible" />

</RelativeLayout>

<LinearLayout
    android:id="@+id/linearlayoutdown"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="15"
    android:background="@color/black" >

    <ImageButton
        android:id="@+id/status"
        style="android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="#00000000"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/juggler" />

    <ImageButton
        android:id="@+id/bag"
        style="android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:background="#00000000"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/bag" />

    <ImageButton
        android:id="@+id/mission"
        style="android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:background="#00000000"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/mission" />

    <ImageButton
        android:id="@+id/skill"
        style="android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="#00000000"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/magic" />
</LinearLayout>

</LinearLayout>
